# mistral

./: .gitignore  CMakeLists.txt  Taskfile.yml
arch/aarch64/: start.S
cmake/: settings.cmake
kernel/core/: kmain.cpp  kmain.hpp  uart.cpp  uart.hpp
toolchains/: aarch64.cmake  arm.cmake
